--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p><a href="../movie-ranking.html"><h3>Movie Ranking Project</h3></a></p>
     <img src="./assets/images/mrp.png" alt="Movie ranking projects" height="200">
     <p><a href="./birthday-invite.html"><h4>Birthday Invite Project</h4></a></p>
-    <img src="./assets/images/bip.png" alt="Birthday Invite Project" height="200">
+    <img src="./assets/images/birthday-invite.png" alt="Birthday Invite Project" height="200">
     <hr/>
     <p><a href="./about.html">About me</a> <a href="./contact.html">Contact me</a></p>
 </body>
